--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>My Information</h1>
+<img src="https://www.instagram.com/p/CIVv-fNBzJY/?utm_source=ig_web_copy_link">
 <h3>Name:</h3>
 <p>P Charitharyan</p>
 <h3>Age (DOB):</h3>
